[project]
name = "hw-logfire"
version = "0.1.0"
description = "dlt + logfire homework: instrument a Module 1 agent"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dlt[duckdb]>=1.17.1",
    "duckdb>=1.3.0",
    "httpx>=0.27.0",
    "logfire>=4.37.0",
    "openai>=1.0.0",
    "minsearch>=0.0.11",
    "requests>=2.28.1",
    "python-dotenv>=1.0.0",
    "pydantic-ai>=0.0.30",
]
